--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Beeware</title>
-  <base href="http://beewareofficial.com">
+  <base href="www.beewareofficial.com">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.61e9dfb19a4b172909f7.css"></head>
+<link rel="stylesheet" href="styles.6d4de102629f18cc2bf5.css"></head>
 <body>
   <app-root></app-root>
 <script type="text/javascript" src="runtime.a5dd35324ddfd942bef1.js"></script><script type="text/javascript" src="es2015-polyfills.4a4cfea0ce682043f4e9.js" nomodule></script><script type="text/javascript" src="polyfills.407a467dedb63cfdd103.js"></script><script type="text/javascript" src="scripts.8bde5597056f6ba2f6a7.js"></script><script type="text/javascript" src="main.69d2b74ca6dec9c4f612.js"></script></body>
