--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/general/logo.png">
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css?family=Didact+Gothic:300,400,500"
-      rel="stylesheet">
+      rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-  <link rel="stylesheet" href="styles.b5d907d8675fd3514ad5.css"></head>
+  <link rel="stylesheet" href="styles.4a2467196045a5eb1c85.css"></head>
   <body>
     <app-root></app-root>
-  <script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.c5dd28b362270c767b34.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.74f1301d91c32ea81f44.js"></script><script type="text/javascript" src="main.35b3367be18fee82c188.js"></script></body>
+  <script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.c5dd28b362270c767b34.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.74f1301d91c32ea81f44.js"></script><script type="text/javascript" src="main.6df7da70615b75e85cb4.js"></script></body>
 </html>
