--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>BEEWARE</title>
-        <base href="/">
+  <head>
+    <meta charset="utf-8">
+    <title>BEEWARE</title>
+    <base href="/">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="assets/general/logo.png">
-        <!-- <link
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="assets/general/logo.png">
+    <!-- <link
       href="https://fonts.googleapis.com/css?family=Didact+Gothic:300,400,500"
       rel="stylesheet"> -->
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-            rel="stylesheet">
-    <link rel="stylesheet" href="styles.83c9acc4799bbca4288f.css"></head>
-    <body>
-        <!-- Github Pages hack to allow SPA refresh without receiving 404. -->
-        <script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+  <link rel="stylesheet" href="styles.83c9acc4799bbca4288f.css"></head>
+  <body>
+    <!-- Github Pages hack to allow SPA refresh without receiving 404. -->
+    <script>
       (function () {
         // Retrieve the URL the user was trying to access when receiving the 404.
         var redirect = sessionStorage.redirect;
         // Remove the URL from sessionStorage.
-        delete sessionStorage.redirect;
+        // delete sessionStorage.redirect;
         // Check if we actually need to redirect.
         if (redirect && redirect != location.href) {
           // We need to redirect to the URL the user was trying to access.
@@ -28,7 +28,7 @@
         }
       })();
     </script>
-        <!-- /Github Pages hack. -->
-        <app-root></app-root>
-    <script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.c5dd28b362270c767b34.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.74f1301d91c32ea81f44.js"></script><script type="text/javascript" src="main.202650937477f5af8562.js"></script></body>
+    <!-- /Github Pages hack. -->
+    <app-root></app-root>
+  <script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.c5dd28b362270c767b34.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.74f1301d91c32ea81f44.js"></script><script type="text/javascript" src="main.202650937477f5af8562.js"></script></body>
 </html>
